# ui_stack

./: .gitignore  README.md  pyproject.toml
ui_stack/: __main__.py  ui_stack.py  utils.py
ui_stack/template/: cookiecutter.json
ui_stack/template/{{cookiecutter.folder}}/static_src/: package.json
ui_stack/template/{{cookiecutter.folder}}/static_src/src/: script.js  styles.css
